wk_taa_taaqa/src/objects/SAP_Inventory__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SAP Inventory</relationshipLabel>
        <relationshipName>SAP_Inventory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Adjusted_Full_Year_Cycle__c</fullName>
        <label>Full Year Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Detail_Type__c</fullName>
        <label>Contract Detail Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <label>Contact ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTN__c</fullName>
        <label>DTN</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IC_Y_N__c</fullName>
        <label>IC</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Owner__c</fullName>
        <formula>IF(BEGINS (DTN__c, &quot;D075&quot;), &quot;Service Source&quot;, 
 IF(BEGINS (DTN__c, &quot;D00&quot;), &quot;R&amp;L Retention&quot;,
  IF(BEGINS (DTN__c, &quot;D011&quot;), &quot;Corporate Software&quot;,
   IF(BEGINS (DTN__c, &quot;D010&quot;), &quot;Corporate National&quot;,
    IF(BEGINS (DTN__c, &quot;D48&quot;), &quot;Strategic Accounts&quot;,
     IF(BEGINS (DTN__c, &quot;D017&quot;), &quot;National Accounts&quot;,
      IF(BEGINS (DTN__c, &quot;D015&quot;), &quot;Federal Government&quot;, &quot;Other&quot;)
)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAN__c</fullName>
        <label>LAN</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MYA_End_Date__c</fullName>
        <label>MYA End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Material_ID__c</fullName>
        <label>Contract Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newport_Rollup__c</fullName>
        <label>BU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newport__c</fullName>
        <label>Newport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAC_DESCRIPTION__c</fullName>
        <label>PAC Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAC__c</fullName>
        <label>PAC</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <label>Product #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QP__c</fullName>
        <label>QP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Program__c</fullName>
        <label>Renewal Program</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_DTN__c</fullName>
        <label>Sales DTN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Contact__c</fullName>
        <label>Ship to Contact</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standing_Order__c</fullName>
        <label>Standing Order</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_Date__c</fullName>
        <label>Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WK_Inventory_ID__c</fullName>
        <externalId>true</externalId>
        <label>WK Inventory ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>SAP Inventory</label>
    <listViews>
        <fullName>Active_Inventory</fullName>
        <columns>NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>Account__c</columns>
        <columns>Product_Number__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Stop_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Adjusted_Full_Year_Cycle__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Renewal_Program__c</columns>
        <columns>DTN__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_MONTHS:12</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active,Renewed,At Risk,Reinstated,In Grace Period</value>
        </filters>
        <label>Active Inventory</label>
    </listViews>
    <listViews>
        <fullName>Cancelled_Inventory_Last_12_Months</fullName>
        <columns>NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>Account__c</columns>
        <columns>Product_Number__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Cancel_Reason__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Stop_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Adjusted_Full_Year_Cycle__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Renewal_Program__c</columns>
        <columns>DTN__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cancel_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_MONTHS:12</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Converted</value>
        </filters>
        <label>Cancelled Inventory (Last 12 Months)</label>
    </listViews>
    <nameField>
        <displayFormat>SAP-{00000}</displayFormat>
        <label>SAP Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Inventory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>